<resources>
    <string name="app_name">TT3 Beadando</string>
    <string name="app_label">Fuggveny valaszto -></string>
    <string name="action_settings">Settings</string>
    <string name="sad">sad</string>
    <string name="function_0">sin(y)+cos(x)</string>
    <string name="function_1">sin(y/x)</string>
    <string name="function_2">x*y</string>
    <string name="function_3">x^2+y^2</string>
    <string name="function_4">sin(x*y)</string>
    <string name="function_5">sin(y+x)</string>
    <string name="function_6">sin(x^2+y^2)</string>
</resources>
