<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.first.MainActivity">
    <item android:id="@+id/function_0"
          android:title="@string/function_0"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/function_1"
          android:title="@string/function_1"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/function_2"
          android:title="@string/function_2"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/function_3"
          android:title="@string/function_3"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/function_4"
          android:title="@string/function_4"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/function_5"
          android:title="@string/function_5"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/function_6"
          android:title="@string/function_6"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>
